# Programs

./: CMakeLists.txt  main.c
libs/: CMakeLists.txt
libs/algorithms/: CMakeLists.txt  algorithms.c  algorithms.h
libs/algorithms/array/: array.c  array.h  sort.c  sort.h
libs/algoritms/: CMakeLists.txt  algoritms.c  algoritms.h
libs/algoritms/array/: array.c
libs/data_structures/: CMakeLists.txt  matrix.c  matrix.h
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/matrix/: matrix.c  matrix.h  tasks matrix
libs/data_structures/ordered_array_set/: ordered_array_set.c  ordered_array_set.h
libs/data_structures/unordered_array_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h
libs/string/: CMakeLists.txt  string_.c  string_.h
libs/string/tasks/: additionSmallerString.h  alternateWords.h  areLexicographicallyOrdered.h  deleteWordFromString.h  getLastWordFirstStringInSecond.h  getLastWordFirstStringWitchFoundInSecond.h  getPalindromWords.h  getStringWithNonEqualOfLastWord.h  getStringWithWordsNonEqualOfLast.h  isStringWithAllLettersOfWord.h  isStringWithCoupleEqualWords.h  isStringWithCoupleWordsWhichCompiledEqualLetters.h  printReverseWordsOnRows.h  printWordBeforeFirstWordWithA.h  printWordsNonEqualLastWord.c  printWordsNonEqualLastWord.h  removeExtraSpaces.c  removeExtraSpaces.h  removeNonLetters.c  removeNonLetters.h  removeNumbersAndLetters.h  replace.h  replacementNumbersToSpace.h  reverseWords.h
